Task 29 Fix. Replace vertical-align, text-align to bottom, left for nav-link::before.

--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -458,8 +458,8 @@ body {
 .nav .nav-link::before {
   content: "";
   position: absolute;
-  vertical-align: 0;
-  text-align: 0;
+  bottom: 0;
+  left: 0;
   background-color: var(--color-white);
   width: 0;
   height: .2rem;
